Fix dialog automatically closing when clicking on scrollbar by adding scrollbars to the dialog when max-height is greater than 80vh.
Fixes #3930

--- a/packages/core/src/components/dialog/_dialog.scss
+++ b/packages/core/src/components/dialog/_dialog.scss
@@ -68,6 +68,8 @@ $dialog-padding: $pt-grid-size * 2 !default;
   display: flex;
   flex-direction: column;
   margin: $dialog-margin;
+  max-height: 80vh;
+  overflow: auto;
   padding-bottom: $pt-grid-size * 2;
   pointer-events: all;
   user-select: text;
